[package]
authors = ["Gluwa Inc. Developer Support <support.dev@gluwa.com>"]
description = "Bindings for no_std Aggregate BLS Signatures"
name = "bls-signatures-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bls-signatures = { git = "https://github.com/gluwa/bls-signatures" }
wasm-bindgen = "0.2.95"
getrandom = { version = "0.2.15", features = ["js"] }
